--- a/src/app/clients/components/client-form/client-form.component.scss
+++ b/src/app/clients/components/client-form/client-form.component.scss
@@ -1,3 +1,10 @@
+.row{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
 .fil-col{
   width: 100%;
 }
