--- a/src/app/clients/components/client-table/client-table.component.html
+++ b/src/app/clients/components/client-table/client-table.component.html
@@ -15,7 +15,7 @@
       <td mat-cell *matCellDef="let client">{{formatPhone(client.phone)}}</td>
   </ng-containter>
 
-  <ng-containter matColumnDef="actions">
+  <ng-containter matColumnDef="actions" class="container-actions">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let client">
           <button mat-mini-fab extended matTooltip="excluir" class="delete-button" (click)="delete(client)">
