--- a/src/app/commons/components/card-header/card-header.component.html
+++ b/src/app/commons/components/card-header/card-header.component.html
@@ -1,5 +1,6 @@
 <mat-card appearence="outlined" class="card-title">
   <mat-card-header class="title-center">
+    <img src="assets/logo.png" alt="Logo" class="header-img">
     <mat-card-title><ng-content></ng-content></mat-card-title>
   </mat-card-header>
 </mat-card>
