--- a/src/app/schedules/components/schedule-calendar/schedule-calendar.component.html
+++ b/src/app/schedules/components/schedule-calendar/schedule-calendar.component.html
@@ -1,87 +1,75 @@
 <div class="container">
-  <div class="row">
 
-      <div class="col-12">
-          <form #form="ngForm" (ngSubmit)="onSubmit(form)" class="container">
-              <div class="row">
-                  <div class="col-4">
-                      <mat-form-field>
-                          <mat-label>Inicio</mat-label>
-                          <input matInput [matTimepicker]="startAtPicker" [ngModelOptions]="{updateOn: 'blur'}"
-                              name="startAt" id="startAt" #startAtModel="ngModel"
-                              (ngModelChange)="onTimeChange($event)" [(ngModel)]="newSchedule.startAt" requied>
-                          <mat-timepicker #startAtPicker />
-                          <mat-timepicker-toggle [for]="startAtPicker" matSuffix />
-                      </mat-form-field>
-                  </div>
-                  <div class="col-4">
-                      <mat-form-field>
-                          <mat-label>Término</mat-label>
-                          <input matInput [matTimepicker]="endAtPicker" [ngModelOptions]="{updateOn: 'blur'}"
-                              name="endAt" id="endAt" #endAtModel="ngModel" [(ngModel)]="newSchedule.endAt"
-                              disabled="true">
-                          <mat-timepicker #endAtPicker />
-                          <mat-timepicker-toggle [for]="endAtPicker" matSuffix />
-                      </mat-form-field>
-                  </div>
-                  <div class="col-3">
-                      <mat-form-field>
-                          <mat-label>Selecione o client</mat-label>
-                          <mat-select name="clientId" id="clientId" #clientIdModel="ngModel"
-                              [(ngModel)]="newSchedule.clientId" required>
-                              <mat-option *ngFor="let client of clients" [value]="client.id">
-                                  {{client.name}}
-                              </mat-option>
-                          </mat-select>
-                      </mat-form-field>
-                  </div>
-                  <div class="col-1">
-                      <button type="submit" mat-mini-fab extended matTooltip="incluir agendamento no dia"
-                          [disabled]="form.invalid">
-                          <mat-icon>add</mat-icon>
-                      </button>
-                  </div>
-              </div>
-          </form>
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)" class="form-container">
+    <div class="form-row">
+      <mat-form-field appearance="fill" class="field-margin">
+        <mat-label>Início</mat-label>
+        <input matInput [matTimepicker]="startAtPicker" name="startAt"
+               [(ngModel)]="newSchedule.startAt" required
+               (ngModelChange)="onTimeChange($event)">
+        <mat-timepicker #startAtPicker></mat-timepicker>
+        <mat-timepicker-toggle [for]="startAtPicker" matSuffix></mat-timepicker-toggle>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Término</mat-label>
+        <input matInput [matTimepicker]="endAtPicker" name="endAt"
+               [(ngModel)]="newSchedule.endAt" readonly>
+        <mat-timepicker #endAtPicker></mat-timepicker>
+        <mat-timepicker-toggle [for]="endAtPicker" matSuffix></mat-timepicker-toggle>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Cliente</mat-label>
+        <mat-select name="clientId" [(ngModel)]="newSchedule.clientId" required>
+          <mat-option *ngFor="let client of clients" [value]="client.id">{{ client.name }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <div class="add-button">
+        <button mat-mini-fab color="primary" type="submit" [disabled]="form.invalid" matTooltip="Incluir">
+          <mat-icon>add</mat-icon>
+        </button>
       </div>
-  </div>
-  <div class="row">
-      <div class="col-6">
-          <mat-card class="calendar-card">
-              <mat-calendar [(selected)]="selected"></mat-calendar>
-          </mat-card>
-      </div>
-      <div class="col-6">
-          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    </div>
+  </form>
 
-              <ng-container matColumnDef="startAt">
-                  <th mat-header-cell *matHeaderCellDef>Inicio</th>
-                  <td mat-cell *matCellDef="let schedule">{{schedule.startAt | date:'HH:mm a'}}</td>
-              </ng-container>
+  <div class="main-content">
+    <mat-card class="calendar-container">
+      <mat-calendar [(selected)]="selected"></mat-calendar>
+    </mat-card>
 
-              <ng-container matColumnDef="endAt">
-                  <th mat-header-cell *matHeaderCellDef>Término</th>
-                  <td mat-cell *matCellDef="let schedule">{{schedule.endAt | date:'HH:mm a'}}</td>
-              </ng-container>
+    <div class="table-container">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table">
+        <ng-container matColumnDef="startAt">
+          <th mat-header-cell *matHeaderCellDef>Início</th>
+          <td mat-cell *matCellDef="let schedule">{{schedule.startAt | date:'HH:mm a'}}</td>
+        </ng-container>
 
-              <ng-container matColumnDef="client">
-                  <th mat-header-cell *matHeaderCellDef>Cliente</th>
-                  <td mat-cell *matCellDef="let schedule">{{schedule.clientName}}</td>
-              </ng-container>
+        <ng-container matColumnDef="endAt">
+          <th mat-header-cell *matHeaderCellDef>Término</th>
+          <td mat-cell *matCellDef="let schedule">{{schedule.endAt | date:'HH:mm a'}}</td>
+        </ng-container>
 
-              <ng-container matColumnDef="actions">
-                  <th mat-header-cell *matHeaderCellDef>Ações</th>
-                  <td mat-cell *matCellDef="let schedule">
-                      <button mat-mini-fab extended matTooltip="excluir" (click)="requestDelete(schedule)">
-                          <mat-icon>delete</mat-icon>
-                      </button>
-                  </td>
-              </ng-container>
+        <ng-container matColumnDef="client">
+          <th mat-header-cell *matHeaderCellDef>Cliente</th>
+          <td mat-cell *matCellDef="let schedule">{{schedule.clientName}}</td>
+        </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-          <mat-paginator [pageSizeOptions]="[3, 6, 9]" showFirstLastButton></mat-paginator>
-      </div>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Ações</th>
+          <td mat-cell *matCellDef="let schedule">
+            <button mat-mini-fab color="warn" matTooltip="Excluir" (click)="requestDelete(schedule)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[3, 6, 9]" showFirstLastButton></mat-paginator>
+    </div>
   </div>
 </div>
