--- a/src/app/clients/components/client-form/client-form.component.html
+++ b/src/app/clients/components/client-form/client-form.component.html
@@ -1,3 +1,4 @@
+<div class="wrapper">
 <form #form="ngForm" (ngSubmit)="onSubmit(form)" class="container">
   <div class="row">
       <div class="col-12">
@@ -35,9 +36,13 @@
 
       <div class="row">
           <div class="col div-button">
-              <button type="submit" >Salvar</button>
+            <button mat-flat-button class="custom-button" type="submit" [disabled]="form.invalid">
+              Salvar
+            </button>
+
           </div>
       </div>
 
   </div>
 </form>
+</div>
