--- a/src/app/commons/components/card-header/card-header.component.scss
+++ b/src/app/commons/components/card-header/card-header.component.scss
@@ -9,8 +9,15 @@
   font-weight: bold;
 }
 
+.header-img {
+  position: absolute;
+  left: 1rem;
+  height: 10rem;
+  margin-left: 3rem;
+}
+
 .card-title {
+  border-radius: 0 !important;
   padding-top: 2rem;
   padding-bottom: 3rem;
-  margin-bottom: 3rem;
 }
