--- a/src/app/schedules/components/schedule-calendar/schedule-calendar.component.scss
+++ b/src/app/schedules/components/schedule-calendar/schedule-calendar.component.scss
@@ -1,3 +1,51 @@
-.calendar-card{
-  width: 30rem;
+.container {
+  padding: 2rem;
+}
+
+.form-container {
+  margin-bottom: 2rem;
+}
+
+.form-row {
+  display: flex;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  align-content: center;
+}
+
+.field-margin {
+  margin-left: 1rem;
+  min-width: 200px;
+}
+
+.add-button {
+  display: flex;
+  align-items: center;
+}
+
+.main-content {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.calendar-container {
+  flex: 1 1 300px;
+  padding: 1rem;
+  max-width: 400px;
+}
+
+.table-container {
+  flex: 2 1 500px;
+  max-width: 100%;
+  overflow-x: auto;
+  background-color: #faf9fd;
+  border-radius: 8px;
+}
+
+.custom-table {
+  width: 100%;
+  min-height: 300px;
 }
